// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-banner Snapshots - Testing classes and states Closable banner 1`] = `
<wpp-banner aria-label="banner" class="wpp-banner" closable="" exportparts="left-icon, wrapper, body, content-wrapper, message, actions-wrapper, close-button, close-icon, actions, actions-wrapper" role="alert" show="" style="--banner-height: undefinedpx; z-index: 1;">
  <mock:shadow-root>
    <div class="hidden-banner-wrapper show undefined" part="wrapper">
      <div class="banner-wrapper show undefined" part="body">
        <div class="content-wrapper" part="content-wrapper">
          <div class="message" part="ws-wrapper">
            <slot part="message"></slot>
          </div>
        </div>
        <div class="actions-wrapper" part="actions-wrapper">
          <div class="actions slot-hidden" part="actions-wrapper" role="presentation">
            <slot name="actions" part="actions"></slot>
          </div>
          <wpp-action-button class="close-button" part="close-button" role="presentation" variant="secondary">
            <wpp-icon-cross aria-hidden="true" part="close-icon" slot="icon-start"></wpp-icon-cross>
          </wpp-action-button>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Closable banner
</wpp-banner>
`;

exports[`wpp-banner Snapshots - Testing classes and states Default banner 1`] = `
<wpp-banner aria-label="banner" class="wpp-banner" exportparts="left-icon, wrapper, body, content-wrapper, message, actions-wrapper, close-button, close-icon, actions, actions-wrapper" role="alert" style="--banner-height: undefinedpx; z-index: 1;">
  <mock:shadow-root>
    <div class="hidden-banner-wrapper undefined" part="wrapper">
      <div class="banner-wrapper undefined" part="body">
        <div class="content-wrapper" part="content-wrapper">
          <div class="message" part="ws-wrapper">
            <slot part="message"></slot>
          </div>
        </div>
        <div class="actions-wrapper" part="actions-wrapper">
          <div class="actions slot-hidden" part="actions-wrapper" role="presentation">
            <slot name="actions" part="actions"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</wpp-banner>
`;

exports[`wpp-banner Snapshots - Testing classes and states Information banner - closable 1`] = `
<wpp-banner aria-label="banner" class="wpp-banner" closable="" exportparts="left-icon, wrapper, body, content-wrapper, message, actions-wrapper, close-button, close-icon, actions, actions-wrapper" role="alert" show="" type="information" style="--banner-height: undefinedpx; z-index: 1;">
  <mock:shadow-root>
    <div class="hidden-banner-wrapper information show" part="wrapper">
      <div class="banner-wrapper information show" part="body">
        <div class="content-wrapper" part="content-wrapper">
          <wpp-icon-info-message class="left-icon" part="left-icon"></wpp-icon-info-message>
          <div class="message" part="ws-wrapper">
            <slot part="message"></slot>
          </div>
        </div>
        <div class="actions-wrapper" part="actions-wrapper">
          <div class="actions slot-hidden" part="actions-wrapper" role="presentation">
            <slot name="actions" part="actions"></slot>
          </div>
          <wpp-action-button class="close-button" part="close-button" role="presentation" variant="inverted">
            <wpp-icon-cross aria-hidden="true" part="close-icon" slot="icon-start"></wpp-icon-cross>
          </wpp-action-button>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Some information-testing message
</wpp-banner>
`;

exports[`wpp-banner Snapshots - Testing classes and states Information banner - closable with actions 1`] = `
<wpp-banner aria-label="banner" class="wpp-banner" closable="" exportparts="left-icon, wrapper, body, content-wrapper, message, actions-wrapper, close-button, close-icon, actions, actions-wrapper" role="alert" show="" type="information" style="--banner-height: undefinedpx; z-index: 1;">
  <mock:shadow-root>
    <div class="hidden-banner-wrapper information show" part="wrapper">
      <div class="banner-wrapper information show" part="body">
        <div class="content-wrapper" part="content-wrapper">
          <wpp-icon-info-message class="left-icon" part="left-icon"></wpp-icon-info-message>
          <div class="message" part="ws-wrapper">
            <slot part="message"></slot>
          </div>
        </div>
        <div class="actions-wrapper" part="actions-wrapper">
          <div class="actions" part="actions-wrapper" role="presentation">
            <slot name="actions" part="actions"></slot>
          </div>
          <wpp-action-button class="close-button" part="close-button" role="presentation" variant="inverted">
            <wpp-icon-cross aria-hidden="true" part="close-icon" slot="icon-start"></wpp-icon-cross>
          </wpp-action-button>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Some information-testing message
  <div slot="actions">
    <wpp-action-button variant="inverted">
      Close
    </wpp-action-button>
  </div>
</wpp-banner>
`;

exports[`wpp-banner Snapshots - Testing classes and states Warning banner - closable 1`] = `
<wpp-banner aria-label="banner" class="wpp-banner" closable="" exportparts="left-icon, wrapper, body, content-wrapper, message, actions-wrapper, close-button, close-icon, actions, actions-wrapper" role="alert" show="" type="warning" style="--banner-height: undefinedpx; z-index: 1;">
  <mock:shadow-root>
    <div class="hidden-banner-wrapper show warning" part="wrapper">
      <div class="banner-wrapper show warning" part="body">
        <div class="content-wrapper" part="content-wrapper">
          <wpp-icon-warning class="left-icon" part="left-icon"></wpp-icon-warning>
          <div class="message" part="ws-wrapper">
            <slot part="message"></slot>
          </div>
        </div>
        <div class="actions-wrapper" part="actions-wrapper">
          <div class="actions slot-hidden" part="actions-wrapper" role="presentation">
            <slot name="actions" part="actions"></slot>
          </div>
          <wpp-action-button class="close-button" part="close-button" role="presentation" variant="secondary">
            <wpp-icon-cross aria-hidden="true" part="close-icon" slot="icon-start"></wpp-icon-cross>
          </wpp-action-button>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Warning banner
</wpp-banner>
`;
